@@ -3,6 +3,9 @@
   - appropriate curses library is now autodetected or selected explicitely by
   --with-gui configure option.
 * ui.c: Fix segfault in the ROM Locations menu.
+* configure.ac, util/benchmark.pl: Merge basic and curses targets - basic
+  version is now built when no curses library is found or when explicitely
+  requested by --without-gui configure option.
 
 
 2012-05-01  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
